--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "babel-preset-es2015": "^6.6.0",
     "mocha": "^2.4.5",
     "should": "^8.2.2"
+  },
+  "engine-strict": true,
+  "engines": {
+    "node": ">=0.12"
   }
 }
