--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src -d lib",
-    "test": "if [ -z ${TRAVIS+x} ]; then vagrant up; fi; npm run build; node_modules/mocha/bin/_mocha;"
+    "cover": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha",
+    "cover-travis": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "execute": "if [ -z ${TRAVIS+x} ]; then node_modules/mocha/bin/_mocha; else npm run cover-travis; fi; ",
+    "vagrant": "if [ -z ${TRAVIS+x} ]; then vagrant up; fi;",
+    "test": "npm run vagrant; npm run build; npm run execute;"
   },
   "files": [
     "lib",
@@ -32,7 +36,10 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
+    "coveralls": "^2.11.8",
+    "istanbul": "^0.4.2",
     "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0",
     "should": "^8.2.2"
   },
   "engine-strict": true,
